syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package calendar;

option go_package = "/calendar";

message CalendarEntity {
	string documentID = 1;
	string notificationID = 2;
	string documentTitle = 3;
	google.protobuf.Timestamp notificationDate = 4;
	google.protobuf.Timestamp expiresAt = 5;
}

message CalendarEntityJSON {
	string documentID = 1;
	string documentTitle = 2;
	string notificationDate = 3;
	string expiresAt = 4;
}

message CreateCalendarRequest {
	string calendarID = 1;
	bytes calendarIV = 2;
	string timezone = 3;
	repeated CalendarEntity calendarEntities = 4;
}

message GetCalendarRequest {
	string calendarID = 1;
	bytes calendarIV = 2;
}

message GetCalendarResponse {
	bytes calendar = 1;
}

service CalendarService {
	rpc GetCalendar (GetCalendarRequest) returns (GetCalendarResponse) {}
	rpc CreateCalendar (CreateCalendarRequest) returns (google.protobuf.Empty) {}
}
